TASK_13.3/deployment-3.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-3
  labels:
    app: deployment-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment-3
  template:
    metadata:
      labels:
        app: deployment-3
    spec:
      containers:
        - name: nginx
          image: nginx
          volumeMounts:
            - name: volume-1
              mountPath: /usr/share/nginx/html/
        - name: multitool
          image: wbitt/network-multitool
      volumes:
        - name: volume-1
          configMap:
            name: configmap-2
