TASK_13.3/service-1.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-1
spec:
  selector:
    app: deployment-3
  ports:
    - name: nginx-http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: multitool-http
      port: 1180
      protocol: TCP
      targetPort: 1180
    - name: multitool-https
      port: 11443
      protocol: TCP
      targetPort: 11443
